# morfTemplateService

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.fr.md  README.md  ROADMAP.md  service.json  service.py
config/: morftemplate.example.json
docs/en/: README.md
docs/fr/: ARCHITECTURE.md  INTEGRATION.md  README.md
examples/minimal/: CMakeLists.txt  main.cpp
include/morftemplate/: ExampleModule.h  HttpServer.h  IModule.h  ModuleFactory.h  ModuleRegistry.h  Service.h  ServiceConfig.h  Version.h
scripts/: new-service.ps1  new-service.sh  sync-morf.ps1  sync-morf.sh
scripts/linux/: install-service.sh  merge-config.py  morftemplate.service  update-service.sh
scripts/windows/: install-service.ps1
service/: CMakeLists.txt  main.cpp
src/: ExampleModule.cpp  HttpServer.cpp  ModuleFactory.cpp  ModuleRegistry.cpp  Service.cpp
